--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,4 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content">
+    <page-menu></page-menu>
+</ion-menu>
+<ion-nav [root]="rootPage" #content></ion-nav>
